--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "shivar-solar-energy",
+  "homepage": "https://bhushan7pawar1.github.io/shivar-solar-energy/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
